<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="BMAppUpdate">应用更新</string>
    <string name="BMBreak_Network">未联网</string>
    <string name="BMDialog_InstallAPK">最新版本已下载，是否安装？</string>
    <string name="BMGprsCondition">（提示：非WIFI环境）</string>
    <string name="BMIgnore">忽略该版</string>
    <string name="BMNewVersion">最新版本:</string>
    <string name="BMNotNow">以后再说</string>
    <string name="BMTargetSize">新版本大小:</string>
    <string name="BMToast_IsUpdating">正在更新中....</string>
    <string name="BMUpdateCheck">v3.1.4Beta</string>
    <string name="BMUpdateContent">更新内容</string>
    <string name="BMUpdateNow">立即更新</string>
    <string name="BMUpdateSize">仅需要下载:</string>
    <string name="BMUpdateTitle">发现新版本</string>
    <string name="account_key_blog_startup_count">blog_startup_count</string>
    <string name="account_key_cookie">cookie</string>
    <string name="account_key_email">email</string>
    <string name="account_key_last_login_day">last_login_day</string>
    <string name="account_key_last_login_month">last_login_month</string>
    <string name="account_key_last_login_year">last_login_year</string>
    <string name="account_key_main_startup_count">main_startup_count</string>
    <string name="account_key_password">password</string>
    <string name="account_key_settings_startup_count">settings_startup_count</string>
    <string name="account_key_thread_startup_count">thread_startup_count</string>
    <string name="account_key_user_id">user_id</string>
    <string name="account_key_user_name">user_name</string>
    <string name="account_key_user_rank">user_rank</string>
    <string name="account_login_as_guest">login_as_guest</string>
    <string name="account_shared_preference">account</string>
    <string name="action_refresh">刷新</string>
    <string name="action_settings">设置</string>
    <string name="action_share_thread">分享帖子</string>
    <string name="action_sign_in">老用户登录</string>
    <string name="action_sign_in_as_guest">以游客身份登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="app_name">一亩三分地</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="blog_dummy_body">前天晚上，Trump当选美国总统。围绕着疯子和骗子、邮件门、美女富二代、歧视女性和同性恋等话题，相信大家这几天被各路媒体各种角度轰炸着。 这次大选，暴露出了美国社会里的很多问题，Trump为什么会赢，他任期内表现会如何，这些不是我要写的，我最关心的话题是： 1. 华人能否有更好的移民政策。 2. 华人能否有更多的就业机会。 这样，大家不用玩什么OPT挂靠的蝇营狗苟，不用经历H1-B抽签的生死心跳，年轻人们顺利开启职场生涯，大家想跳槽的跳槽，想创业的创业，想买房的早点买房，总之，多一些个人自由、多一些发展空间。 本文是Warald个人看法，当然比较主观。 《一》共和党的权力增大 谁当总统固然重要，但美国不是总统独裁，参议院和众议院也很关键。而这次选举，总统宝座和两院都被川普所在的共和党控制了 – 看上去有一党独大的可能性。 这让我想起2013年，奥巴马执政期间，曾经试图推动移民法改革，议案里包含了对高科技移民很有利的条款，包括给STEM专业的硕士和博士绿卡 – 这条政策并非希拉里首创的。 这个议案（以及未来的移民法案）需要经过三层批准： 1. 众议院 2. 参议院 3. 总统 后来，议案被众议院批准了，奥巴马也表态支持，但是被参议院否决。这也是奥巴马政治生涯一大憾事。 参议院否决议案的原因，并不是对有利于高科技移民的条款不满，而是对移民法案针对的主要人群（非法移民）部分有意见。如果当年两院都通过议案的话，估计就不会有前段时间的OPT延期的风波、H1-B抽签等各种折磨了。 其实对于合法移民来说，无论是梦幻般的STEM专业给绿卡，还是增加绿卡或者工作签证名额等相对简单的举措，任何改进都是好消息。很不幸，过去几年，任何改进都没发生。至于原因，说简单点，就是两党扯皮。 这次共和党人当总统、获得两院多数席位，看上去似乎是一党独大了，希望这届政府扯皮的事情少点，新的移民法能早点通过。 《二》Trump对待留学生和高科技移民的态度 有些同学可能看到一些新闻报道，说Trump威胁上台后要取消H1-B工作签证。但这个言论是有上下文的。他针对的是印度咨询公司（ICC）滥用H1-B和美国公司把IT职位外包，并非反对留学生读完书留在美国，而打击H1-B滥用更是让大家举手称赞的。 2015年8月，Trump在他的twitter账户里说过： Screen Shot 2016-11-10 at 12.20.32 AM 图片来自于voanews.com 2016年8月Trump在Texas的一场演讲里说过： we want people to be in our country legally, and we want great people too, we want people with achievement, if you go to harvard, stanford, wharton school of finance, yale, top of your class, you want to stay in the US, you want to have your career here, (today) you can’t. they throw you out, they sent you back to China, back to Mexico. we need these people. those are the people we need. 这里并不是要单独表扬Trump，之前希拉里也表态过要给STEM专业的国际学生绿卡，而是想说，美国两党在对于高科技人士的态度没有很大的分歧，他们都希望国际学生能留下为美国效力。至于他们的支持力度是100分还是80分，其实有50分甚至30分就能让很多人受益了 – 如果只是增加高学历H1-B名额，光是这样一个简单政策，会让多少人免受H1-B抽签的折磨？ 将来，H1-B也许会改革，也许会被新的签证替代，但是Warald相信，美国政府留住高科技人才的政策是不会变的。Again，希望两党能少扯皮，任何一方推动改革都可以。 《三》荒谬的平权和政治正确 这次总统选举，华人社区里出现了一批坚定的Trump支持者，在多个州出现过这种场景，华人团体出钱找飞机拉标语： CHINESETRUMP-NC 相比之下，美国受过高等教育的人、白领尤其是高科技公司员工、城市居民，主流是支持希拉里的。 为什么这些华人，作为受过高等教育的人、白领尤其是高科技公司员工、城市居民，会反对希拉里？ 好多年前，黑人民权领袖马丁路德金在著名的I have a dream演说里说过： I have a dream that my four little children will one day live in a nation where they will not be judged by the color of their skin but by the content of their character. 当时，黑人因为肤色/种族而被歧视。经过这些年的努力，美国在改善人权方面取得了很大的进步，但却走上另一个极端：黑人因为肤色/种族而被过度优待。 美国大学、政府机构等，在努力增大少数族裔（黑人和墨西哥人）的比例，为此不惜降低标准。扶持、帮助少数族裔本来是应该的，但是达标的人数不够，怎么办？根本方法，是找出不达标的原因，采取针对性措施改进，但那样做，投入时间久，必然有阵痛，效果也未知，不如继续降低标准见效快。 过度扶持一方必然会影响其他人的利益。尤其是华人，如果完全靠能力竞争，本来可以有很多华人可以读名校、找到好工作，现在有了按照种族的名额配比，我们只能先在窝里自残，我们上大学、求职等，难度大很多。可以不夸张的说，平权或政治正确，基本等同于华人利益受损。这几年不断有华人甚至白人告哈佛等名校在录取上搞逆向歧视。 这把火也烧到了高科技行业。近期在网上看到两个消息，一个是位华人家长，在微信群里说孩子在常春藤读本科，参加微软的校招，被告知只有黑人和墨西哥人等少数族裔才会被考虑；另一个是网络帖子，说旧金山某著名公司在大力提高少数族裔的比例，有个高管，带着聘用的咨询师给大家培训如何提高少数族裔在公司的比例，减少歧视。有人提问说，如果他们面试过不了关、达不到标准怎么办？咨询师（也是黑人）说，你这话本身就是歧视。 第一代移民在成为公民、获得选举权的时候，往往已经有孩子了。对很多人来说，子女的教育和未来是最不能忍的。过去几年里，在民主党控制的加州，华人群体不断跟各种损害华人利益的法案作斗争。这次很多华人反对希拉里，也就可以理解了，未必是打心眼里喜欢Trump，而是实在不能容忍希拉里所代表的平权和政治正确。 希望政治正确的风头能随着民主党的落败而减弱一些。 写在最后的话： 在Trump当选后，美国很多大城市和大学校园陆续有人上街游行。这次大选，跟所有网络撕逼大战相同之处，是爆料十足、娱乐性十足，很多人选择了站边；不同之处，是网上吵完了往往没下文了，看热闹的人多，而总统选举，意味着有接近一半的美国人要被迫接受自己不喜欢的人做总统，在至少四年里，天天从新闻里看到他，被他的政策影响着。美国社会如此分裂，Trump能否处理好？他能挽救这种局面，还是让社会继续分裂、让冲突继续恶化？ 最后，作为华人的一员，Warald当然有倾向性。说实话，谁当总统能让美国更好、竞选时的承诺能兑现多少，都不好说，但是从华人力挺梁警官、留学生为opt延期奋争，到这次用飞机拉标语表态，让我为之振奋，这在以前是没有的。华人在政治上参与度的提高，是件好事。过去，我们被忽略太多；今后，希望美国的政客们能重视我们的利益。 ​能为我们说话的，只有我们自己。 各位，你们怎么看待这次总统选举？你们关心什么？ – Warald (Email: iamxiaoning@gmail.com) 博客: http://www.1point3acres.com 微博：http://www.weibo.com/warald 欢迎转载，转载必须在标题注明转载，在文章正文开始之前而不是最后，用不小于正文的字体大小，肉眼可以清楚识别的颜色，一字不漏的附带以上三行内容。否则视为侵权！感谢合作。</string>
    <string name="bloginfo_dummy_intro">前天晚上，Trump当选美国总统。围绕着疯子和骗子、邮件门、美女富二代、歧视女性和同性恋等话题，相信大家这几天被各路媒体各种角度轰炸着。 这次大选，暴露出了美国社会里的很多问题，Trump为什么会赢，他任期内表现会如何，这些不是我要写的，我最关心的话题是： 1. 华人能否有更好的移民政策。 2. 华人能否有更多的就业机会。 这样，大家不用玩什么OPT挂靠的蝇营狗苟，不用经历H1-B……</string>
    <string name="bloginfo_dummy_title">川普当选美国总统，对留学生来说，意味着什么？</string>
    <string name="bmob_common_action_cancel">取消</string>
    <string name="bmob_common_action_continue">继续</string>
    <string name="bmob_common_action_info_exist">正在下载中.</string>
    <string name="bmob_common_action_pause">暂停</string>
    <string name="bmob_common_download_failed">下载失败</string>
    <string name="bmob_common_download_finish">下载完成，请点击安装</string>
    <string name="bmob_common_download_notification_prefix">正在下载:</string>
    <string name="bmob_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="bmob_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="bmob_common_patch_finish">更新完成，请点击安装</string>
    <string name="bmob_common_pause_notification_prefix">暂停:</string>
    <string name="bmob_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="bmob_common_start_download_notification">正在下载应用</string>
    <string name="bmob_common_start_patch_notification">正在更新安装包</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="dialog_logout_confirm_content">应用将清除您的帐号信息并回到登录界面，您将无法使用当前登陆的帐号自动登录。</string>
    <string name="dialog_logout_confirm_no">返回</string>
    <string name="dialog_logout_confirm_title">您确定要注销登录状态吗？</string>
    <string name="dialog_logout_confirm_yes">注销</string>
    <string name="error_connection_failure">连接失败</string>
    <string name="error_field_required">该栏为必填项</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_invalid_email">用户名过短</string>
    <string name="error_invalid_password">密码须含大小写字母、数字和符号</string>
    <string name="error_no_network">没有网络连接</string>
    <string name="error_socket_timeout">连接超时</string>
    <string name="error_something_goes_wrong">出了点问题</string>
    <string name="error_unknown">未知错误</string>
    <string name="header_placeholder_click_to_login">点击头像以登录</string>
    <string name="nav_menu_item_academic">学术</string>
    <string name="nav_menu_item_application">申请</string>
    <string name="nav_menu_item_blog">博客</string>
    <string name="nav_menu_item_entertainment">生活</string>
    <string name="nav_menu_item_finance">财务</string>
    <string name="nav_menu_item_message">消息</string>
    <string name="nav_menu_item_share">分享</string>
    <string name="nav_menu_item_study">学习</string>
    <string name="nav_menu_item_work">工作</string>
    <string name="nav_menu_itemgroup_social">社交</string>
    <string name="pref_build_version_description">Alpha 6.0.0</string>
    <string name="pref_build_version_key">build_version</string>
    <string name="pref_build_version_title">版本号</string>
    <string name="pref_category_about_application">应用</string>
    <string name="pref_category_about_developer">开发者</string>
    <string name="pref_category_account">账户</string>
    <string name="pref_check_update_description">一个应用的命运啊，当然要考虑到历史的行程</string>
    <string name="pref_check_update_key">pref_check_update</string>
    <string name="pref_check_update_title">检查更新</string>
    <string name="pref_developer_github_description">但是我见到你们这样热情啊，一句话不说也不吼</string>
    <string name="pref_developer_github_key">pref_developer_github</string>
    <string name="pref_developer_github_title">Github主页</string>
    <string name="pref_developer_mogician_description">科学膜蛤，提高自己的姿势水平</string>
    <string name="pref_developer_mogician_key">pref_developer_mogician</string>
    <string name="pref_developer_mogician_title">膜法指南</string>
    <string name="pref_developer_profile_description">我就什么话也不说，这是坠吼的</string>
    <string name="pref_developer_profile_key">pref_developer_profile</string>
    <string name="pref_developer_profile_title">Naco Siren</string>
    <string name="pref_donation_description">我给你们搞的这个东西呀……Excited</string>
    <string name="pref_donation_key">pref_donation</string>
    <string name="pref_donation_title">捐赠</string>
    <string name="pref_feedback_description">搞个大新闻，再把我批判一番</string>
    <string name="pref_feedback_key">pref_feedback</string>
    <string name="pref_feedback_title">反馈意见</string>
    <string name="pref_logout_description">我今天算是得罪了你们一下</string>
    <string name="pref_logout_key">pref_logout</string>
    <string name="pref_logout_title">注销登录</string>
    <string name="pref_send_anonymous_data_key">send_anonymous_data</string>
    <string name="pref_send_anonymous_data_off_description">你们又不高兴，那怎么办？</string>
    <string name="pref_send_anonymous_data_on_description">你们有这个必要告诉我一点，BUG的经验</string>
    <string name="pref_send_anonymous_data_title">发送匿名数据</string>
</resources>